# headjack

./: .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  alembic.ini  demo.py  docker-compose.yml  log-config.ini  netlify.toml  package-lock.json  pyproject.toml
.docker/: headjack.dockerfile  jupyter-headjack.dockerfile
.github/workflows/: python-checks.yml
alembic/: env.py
alembic/versions/: 2023_05_02_0559-82d0384e679f_first_commit.py  2023_05_05_2335-cfc5e162e9fb_first_migration.py
client/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
docs/: README.md  build-docs.sh  metric_data_query_to_metrics_dimensions.md  metric_search_queries_to_metrics_dimensions.md
docs/config/_default/: config.toml  menu.toml  params.toml
docs/content/0.1.0/: contributing.md  datajunction-metrics-layer.md  deploying-a-headjack-server.md  embeddings-and-vector-datastores.md  getting-started.md  integration-with-datajunction.md  llms.md  questions-&-commands.md  semantic-search-interface.md  the-hss-interface.md  using-the-headjack-client.md
docs/content/0.1.0/posts/theme-doc/: post.md  post2.md
docs/content/versions/: _index.md
docs/layouts/taxonomy/: list.html
examples/: load_knowledge_documents.py
examples/knowledge/: 2022-q4-earnings.txt  2023-q1-earnings.txt  big-new-contract.txt  brooklyn-bridge-behind-scheduler.txt  site-safety-former-employees.txt  winter-repair-orders.txt
headjack/: __about__.py  __init__.py  config.py  demo.py  exceptions.py  logging.py  models.py  utils.py
headjack-search-service/: .gitmodules  Dockerfile  README.md  docker-compose.yml  pyproject.toml
headjack-search-service/examples/: embed.py
headjack-search-service/examples/documents/: building_design_and_construction_handbook.txt  city-infrastructure-comparison.txt  company-overview.txt  cto-strategic-technology-vision-directors.txt  cto-strategic-technology-vision.txt  east-v-west-home-architecture.txt  full-bench-and-end-haul.txt  most-profitable-municipalities.txt  new-legislation.txt  pto.txt  road-closure-guide-and-tips.txt  safely-using-a-trencher.txt  side-cast-fills.txt  summer-safety-precautions.txt  us-real-estate-third-party.txt  us-real-estate-vacation-third-party-2.txt
headjack-search-service/examples/messages/: thread1.txt  thread10.txt  thread11.txt  thread13.txt  thread14.txt  thread15.txt  thread16.txt  thread17.txt  thread18.txt  thread19.txt  thread2.txt  thread20.txt  thread3.txt  thread4.txt  thread5.txt  thread6.txt  thread7.txt  thread8.txt  thread9.txt
headjack-search-service/examples/people/: employees.json
headjack-search-service/headjack_search_service/api/: app.py  helpers.py  models.py
headjack-ui/: Dockerfile  package-lock.json  package.json
headjack-ui/public/: index.html
headjack-ui/src/: App.js  AppRouter.js
headjack-ui/src/components/: dataTable.js  sidebar.js
headjack-ui/src/lottie/: purpleRobot.json  typingHands.json  yellowRobot.json
headjack-ui/src/pages/: ChatPage.js  MessagesPage.js  MetricsPage.js  PeoplePage.js  SummaryPage.js
headjack/agents/: __init__.py  agent_dispatch.py  chat_agent.py  knowledge_search.py  messages_search.py  metric_calculate.py  metric_search.py  people_search.py  plot_data.py  registry.py  standard.py
headjack/agents/examples/: metric_calculate_examples.py  metric_calculate_examples_dict.py
headjack/agents/prompt_queries/: standard.py
headjack/agents/query_templates/: standard.py
headjack/api/: app.py  chat.py  dispatch.py  helpers.py  messages.py  metric_calculate.py  metric_search.py  people.py  plot.py  summary.py
headjack/models/: agent.py  db.py  memory.py  session.py  tool.py  utils.py  utterance.py  vector_store.py
headjack/tools/: __init__.py  example_builtin_tool_schema.py  knowledge_search.py  metric_calculate.py  metric_dimension_search.py  metric_search.py
headjack/utils/: __init__.py  add_source_to_utterances.py  basic.py  consistency.py  fetch.py  semantic_sort.py
headjack_server/: config.py  models.py
headjack_server/agents/: standard.py
headjack_server/agents/query_templates/: standard.py
headjack_server/api/: app.py  utils.py
headjack_server/models/: agent.py  memory.py  session.py  tool.py
headjack_server/tools/: knowledge_search.py
notebooks/: Development.ipynb  bkp.ipynb  langchain.ipynb  lmql_prototyping.ipynb
tests/: conftest.py
tests/api/: test_app.py
tests/models/: test_db.py
web/: chat-demo.html  chat.html  home.html
