[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "headjack-server"
version = "0.0.1a1"
description = ""
authors = ["Nick Ouellet <nick@ouellet.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lmql = { git = "https://github.com/eth-sri/lmql.git", branch = "tiktoken" }
langchain = ">= 0.0.147"
chromadb = "0.3.21"
fastapi = ">= 0.71.0"

[tool.poetry.dev-dependencies]
pytest = "7.2.2"
pytest-checkdocs = "2.9.0"
pre-commit = "3.2.1"
coverage = "^7.2.3"
httpx = ">= 0.24.0"

[tool.black]
line-length = 130

[tool.flake8]
max-line-length = 130
exclude = "demo.py"

[tool.isort]
profile = "black"
line_length = 130
skip_gitignore = true
