[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pdm.build]
includes = ["headjack"]

[project]
name = "headjack"
dynamic = ["version"]
description = ""
authors = [
    {name = "circargs", email = "nick@ouellet.dev"},
    {name = "Nick Ouellet", email = "nick@ouellet.dev"},
]
dependencies = ["lmql @ git+https://github.com/eth-sri/lmql.git@tiktoken", "chromadb==0.3.21", "fastapi>=0.71.0", "PyJWT>=2.6.0", "sqlmodel>=0.0.8"]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = {text = "Aache 2.0"}

[tool.pdm.dev-dependencies]
dev = [
    "pytest==7.2.2",
    "pre-commit==3.2.1",
    "coverage<8.0.0,>=7.2.3",
    "httpx>=0.24.0",
    "tiktoken>=0.4.0",
]

[project.optional-dependencies]
uvicorn = [
    "uvicorn[standard]>=0.21.1",
]

[project.urls]
repository = "https://github.com/KnowledgeForge/headjack"

[tool.hatch.version]
path = "headjack/__about__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 130

[tool.flake8]
max-line-length = 130
exclude = "demo.py"
ignore = [
    "E501",
    "W503"
]

[tool.isort]
profile = "black"
line_length = 130
skip_gitignore = true
